Made it so that our background flag image will always be fixed and never stretched/repeated

--- a/proposal/voting_info_style.css
+++ b/proposal/voting_info_style.css
@@ -12,6 +12,8 @@ body
 	height: 100vh;
 	background-size: cover;
 	background-position:center;
+	background-repeat:no-repeat;
+	background-attachment: fixed;
 }
 /*Makes our tabs centered on screen*/
 .table{
